finished indecision app

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,6 +3,8 @@ $off-black: #20222b;
 $off-white: #a5afd7;
 $dark-blue: #333745;
 $purple: #8357c5;
+$blue: #3c4251;
+$light-blue: #464b5e;
 
 //spacing
 $standard-spacing: 1rem;
@@ -11,3 +13,5 @@ $small-font-size: 1.2rem;
 $standard-font-size: 1.6rem;
 $large-font-size: 3.2rem;
 $xlarge-font-size: 6.4rem;
+
+$desktop-breakpoint: 45rem;
