--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   background: $off-black;
   color: white;
-  margin-bottom: 4.8rem;
+  margin-bottom: $standard-font-size;
   padding: $standard-font-size 0;
 }
 
@@ -15,4 +15,10 @@
   font-size: $standard-font-size;
   font-weight: 500;
   margin: 0;
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .header {
+    margin-bottom: $xlarge-font-size;
+  }
 }
